--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <!-- IMPORTANT: allow consistent layout/scrolling across devices -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=1920">
   <meta name="referrer" content="no-referrer" />
   <title>Ignite Digital — Tech & Marketing Briefing</title>
   <style>
@@ -788,3 +788,4 @@
   </script>
 </body>
 </html>
+
