--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- IMPORTANT: allow consistent layout/scrolling across devices -->
   <meta name="viewport" content="width=1920">
   <meta name="referrer" content="no-referrer" />
   <title>Ignite Digital — Tech & Marketing Briefing</title>
@@ -96,6 +95,15 @@
     #weather-widget .weather-desc{font-size:1.1rem; text-align:center; margin:-4px 0 8px 0}
     #weather-widget .temp-range{font-size:.95rem; text-align:center; color:var(--text-muted)}
 
+    /* --- ADDED FOR TRAFFIC WIDGET --- */
+    #traffic-widget iframe {
+        width: 100%;
+        height: 350px;
+        border: none;
+        border-radius: 6px;
+    }
+    /* ---------------------------------- */
+
     /* Stocks */
     #stock-ticker .stock-item{
       display:flex; justify-content:space-between; align-items:center;
@@ -176,6 +184,7 @@
       }
     }
 
+   
   </style>
 </head>
 <body>
@@ -186,6 +195,11 @@
       <div id="weather-widget" class="widget">
         <h3 class="widget-title">Mississauga, ON</h3>
         <div id="weather-content"></div>
+      </div>
+
+      <div id="traffic-widget" class="widget">
+        <h3 class="widget-title">Live Commute</h3>
+        <iframe src="http://googleusercontent.com/maps/google.com/4" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div id="quote-widget" class="widget">
         <h3 class="widget-title">Quote</h3>
@@ -779,5 +793,3 @@
   </script>
 </body>
 </html>
-
-
