--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
       <div id="traffic-widget" class="widget">
         <h3 class="widget-title">Live Commute</h3>
-        <iframe src="http://googleusercontent.com/maps/google.com/4" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d184630.26155391257!2d-79.73384537721364!3d43.69292671836781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x882b473cafcd38d5%3A0xbf9304ca311f3e2!2sIgnite%20Digital%2C%20Kitimat%20Road%2C%20Mississauga%2C%20ON!3m2!1d43.6029195!2d-79.7332782!4m5!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON!3m2!1d43.653226!2d-79.3831843!5e0!3m2!1sen!2sca!4v1759954013314!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div id="quote-widget" class="widget">
         <h3 class="widget-title">Quote</h3>
@@ -793,3 +793,4 @@
   </script>
 </body>
 </html>
+
