--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     }
     
     function fetchTomTomTravelTime() {
-      const apiKey = 'YOUR_TOMTOM_API_KEY'; // <-- PASTE YOUR KEY HERE
+      const apiKey = 'JU0CF4lFiUjrmA30OEiLIuTZtnrTuqYE'; // <-- PASTE YOUR KEY HERE
       const outputDiv = document.getElementById('travel-time-text');
       
       const locations = '-79.7450,43.5952:-79.3813,43.6454';
@@ -596,3 +596,4 @@
   </script>
 </body>
 </html>
+
