--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="referrer" content="no-referrer" />
-  <title>Ignite Digital — Tech & Marketing Briefing</title>
+  <title>Ignite Digital — Hub</title>
 
   <!-- Raleway font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -719,3 +719,4 @@
   </script>
 </body>
 </html>
+
