--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       { label: 'Shoppers World (Brampton)',           query: 'Shoppers World, Brampton ON' },
       { label: 'Square One (Mississauga)',            query: 'Square One, Mississauga ON' },
       { label: 'Churchill Meadows (Mississauga)',     query: 'Churchill Meadows, Mississauga ON' },
-      { label: 'Mattamy National Cycling Centre',     query: 'Mattamy National Cycling Centre, Milton ON' }
+      { label: 'Mattamy National Cycling Centre (Milton)',     query: 'Mattamy National Cycling Centre, Milton ON' }
     ];
 
     const GEO_CACHE = new Map();
@@ -719,4 +719,3 @@
   </script>
 </body>
 </html>
-
